syntax = "proto3";

package buildbarn.configuration.bb_browser;

import "pkg/proto/configuration/auth/auth.proto";
import "pkg/proto/configuration/blobstore/blobstore.proto";
import "pkg/proto/configuration/global/global.proto";
import "pkg/proto/configuration/tls/tls.proto";

option go_package = "github.com/buildbarn/bb-browser/pkg/proto/configuration/bb_browser";

message ApplicationConfiguration {
  // Configuration for blob storage.
  buildbarn.configuration.blobstore.BlobstoreConfiguration blobstore = 1;

  // Maximum Protobuf message size to unmarshal.
  int64 maximum_message_size_bytes = 2;

  // Address on which to listen to expose the web service.
  string listen_address = 3;

  // The path under which the web service needs to be exposed. When left
  // empty, the web service will be exposed at "/".
  string route_prefix = 7;

  // Common configuration options that apply to all Buildbarn binaries.
  buildbarn.configuration.global.Configuration global = 4;

  // Prefix that needs to be added to instance names that are part of
  // bb_clientd pathname strings.
  //
  // bb_browser's web interface contains buttons that can be used to
  // generate paths of objects in bb_clientd and copy them to the
  // clipboard. Because most setups of bb_clientd use
  // DemultiplexingBlobAccess, it may be necessary to add a prefix to
  // the REv2 instance name that's embedded in the pathname string.
  string bb_clientd_instance_name_prefix = 5;

  // The Initial Size Class Cache (ISCC) where execution times of
  // previous invocations of actions are stored. bb_browser is capable
  // of displaying this information on pages of actions.
  //
  // When this option is not set, no statistics will be shown.
  buildbarn.configuration.blobstore.BlobAccessConfiguration
      initial_size_class_cache = 6;

  // Authorization requirements applied to objects read through the
  // web service from the Content Addressable Storage (CAS),
  // Action Cache (AC) and Initial Size Class Cache (ISCC).
  buildbarn.configuration.auth.AuthorizerConfiguration authorizer = 8;

  // Optional TLS configuration for the BuildBarn browser server.
  // TLS is not enabled when left unset.
  buildbarn.configuration.tls.ServerConfiguration tls = 9;
}
